<resources>
    <string name="app_name">homework02</string>
    <string name="_0">0</string>
    <string name="button_ac">AC</string>
    <string name="button_backspace"><![CDATA[<-]]></string>
    <string name="button_percent">%</string>
    <string name="divide">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">X</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="comma">,</string>
    <string name="equal">=</string>
    <string name="background_picture">background picture</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="settings_title">Настройки</string>
</resources>