<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_background"
        style="@style/BackgroundImageStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_picture" />

    <View
        style="@style/BackgroundForNumbersAndOperations"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/center_guideline" />

    <TextView
        android:id="@+id/additional_output_line_text_view"
        style="@style/AdditionalOutputTextStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/additional_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1258 * 95 = 119510" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_settings"
        style="@style/SettingsButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_settings_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/output_line_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="@id/center_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/additional_guideline" />

    <View
        style="@style/DividerStyle"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@id/center_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/output_line_text_view" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/additional_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_ac"
        style="@style/OperationButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_ac"
        app:layout_constraintBottom_toTopOf="@id/button_7"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_backspace"
        app:layout_constraintTop_toBottomOf="@id/center_guideline"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_backspace"
        style="@style/OperationButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/button_backspace"
        app:icon="@drawable/ic_backspace_24dp"
        app:layout_constraintBottom_toTopOf="@id/button_8"
        app:layout_constraintLeft_toRightOf="@id/button_ac"
        app:layout_constraintRight_toLeftOf="@id/button_percent"
        app:layout_constraintTop_toBottomOf="@id/center_guideline"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_percent"
        style="@style/OperationButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_percent"
        app:layout_constraintBottom_toTopOf="@id/button_9"
        app:layout_constraintLeft_toRightOf="@id/button_backspace"
        app:layout_constraintRight_toLeftOf="@id/button_divide"
        app:layout_constraintTop_toBottomOf="@id/center_guideline"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_divide"
        style="@style/OperationButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/divide"
        app:layout_constraintBottom_toTopOf="@id/button_multiply"
        app:layout_constraintLeft_toRightOf="@id/button_percent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/center_guideline"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@id/button_4"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_8"
        app:layout_constraintTop_toBottomOf="@id/button_ac" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@id/button_5"
        app:layout_constraintLeft_toRightOf="@id/button_7"
        app:layout_constraintRight_toLeftOf="@id/button_9"
        app:layout_constraintTop_toBottomOf="@id/button_backspace" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        app:layout_constraintLeft_toRightOf="@id/button_8"
        app:layout_constraintRight_toLeftOf="@id/button_multiply"
        app:layout_constraintTop_toBottomOf="@id/button_percent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiply"
        style="@style/OperationButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/multiply"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintLeft_toRightOf="@id/button_9"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_divide" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@id/button_1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_5"
        app:layout_constraintTop_toBottomOf="@id/button_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@id/button_2"
        app:layout_constraintLeft_toRightOf="@id/button_4"
        app:layout_constraintRight_toLeftOf="@id/button_6"
        app:layout_constraintTop_toBottomOf="@id/button_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@id/button_3"
        app:layout_constraintLeft_toRightOf="@id/button_5"
        app:layout_constraintRight_toLeftOf="@id/button_minus"
        app:layout_constraintTop_toBottomOf="@id/button_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        style="@style/OperationButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/minus"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintLeft_toRightOf="@id/button_6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_multiply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@id/button_day_night_mode"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_2"
        app:layout_constraintTop_toBottomOf="@id/button_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintLeft_toRightOf="@id/button_1"
        app:layout_constraintRight_toLeftOf="@id/button_3"
        app:layout_constraintTop_toBottomOf="@id/button_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@id/button_comma"
        app:layout_constraintLeft_toRightOf="@id/button_2"
        app:layout_constraintRight_toLeftOf="@id/button_plus"
        app:layout_constraintTop_toBottomOf="@id/button_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        style="@style/OperationButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@id/button_calculate"
        app:layout_constraintLeft_toRightOf="@id/button_3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_minus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_day_night_mode"
        style="@style/DayNightButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:icon="@drawable/ic_lamp_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_0"
        app:layout_constraintTop_toBottomOf="@id/button_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_day_night_mode"
        app:layout_constraintRight_toLeftOf="@id/button_comma"
        app:layout_constraintTop_toBottomOf="@id/button_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_comma"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/comma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_0"
        app:layout_constraintRight_toLeftOf="@id/button_calculate"
        app:layout_constraintTop_toBottomOf="@id/button_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_calculate"
        style="@style/OperationButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_comma"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_plus" />

</androidx.constraintlayout.widget.ConstraintLayout>